# atlas_gateway

./: AUTHORS  CMakeLists.txt  README.md  build.sh
scripts/: dependencies.sh
src/: AtlasMain.cpp
src/alarm/: AtlasAlarm.cpp  AtlasAlarm.h
src/bayes_network_connector/: AtlasCoapPush.cpp  AtlasCoapPush.h  AtlasFeatureReputation.cpp  AtlasFeatureReputation.h
src/claim_approve/: AtlasApprove.cpp  AtlasApprove.h  AtlasClaim.cpp  AtlasClaim.h
src/cloud/: AtlasCloudCmdParser.cpp  AtlasCloudCmdParser.h  AtlasCommandsCloud.h  AtlasDeviceCloud.cpp  AtlasDeviceCloud.h  AtlasRegisterCloud.cpp  AtlasRegisterCloud.h
src/coap/: AtlasCoapClient.cpp  AtlasCoapClient.h  AtlasCoapRequest.cpp  AtlasCoapRequest.h  AtlasCoapResource.h  AtlasCoapResponse.h  AtlasCoapServer.cpp  AtlasCoapServer.h
src/commands/: AtlasCommand.h  AtlasCommandBatch.cpp  AtlasCommandBatch.h  AtlasCommandClient.h  AtlasCommandDevice.cpp  AtlasCommandDevice.h  AtlasCommandType.h
src/device/: AtlasDevice.cpp  AtlasDevice.h  AtlasDeviceManager.cpp  AtlasDeviceManager.h
src/http/: AtlasHttpServer.cpp  AtlasHttpServer.h
src/identity/: AtlasIdentity.cpp  AtlasIdentity.h
src/logger/: AtlasLogger.cpp  AtlasLogger.h
src/mosquitto_plugin/: AtlasMosquittoPlugin.cpp  atlas_mosquitto_logger.c  atlas_mosquitto_logger.h  atlas_mosquitto_plugin.c
src/mqtt_client/: AtlasMqttClient.cpp  AtlasMqttClient.h  AtlasMqttClient_actionListener.cpp  AtlasMqttClient_actionListener.h  AtlasMqttClient_callback.cpp  AtlasMqttClient_callback.h  AtlasMqttException.cpp  AtlasMqttException.h
src/policy/: AtlasFirewallPolicy.cpp  AtlasFirewallPolicy.h  AtlasPolicy.cpp  AtlasPolicy.h
src/pubsub_agent/: AtlasPubSubAgent.cpp  AtlasPubSubAgent.h
src/register/: .AtlasRegister.cpp.swp  AtlasRegister.cpp  AtlasRegister.h
src/reputation/: AtlasDeviceFeature.h  AtlasDeviceFeatureManager.cpp  AtlasDeviceFeatureManager.h  AtlasDeviceFeatureType.h  AtlasFeatureReputation.cpp  AtlasFeatureReputation.h  AtlasReceiveFeedback.cpp  AtlasReceiveFeedback.h  AtlasReputation_NaiveBayes.cpp  AtlasReputation_NaiveBayes.h  AtlasReputation_Tester.cpp  AtlasReputation_Tester.h
src/sql/: AtlasSQLite.cpp  (+2 more)
(+41 files in other folders)
